[gd_scene load_steps=25 format=3 uid="uid://bek3derprev18"]

[ext_resource type="Script" uid="uid://c7c2x0t6jjupk" path="res://Script/Character/character_controller.gd" id="1_y5alb"]
[ext_resource type="Script" uid="uid://bkyu1oyiksvly" path="res://Script/Character/Character Controller/character_action_controller.gd" id="2_8fd8j"]
[ext_resource type="Resource" uid="uid://d1eoxqg5yuqdt" path="res://Resource/Character/character_resource.tres" id="2_h3o0s"]
[ext_resource type="Script" uid="uid://dateptc72flsb" path="res://Script/Character/Character Components/CharacterMovement/character_movement.gd" id="2_ptqjd"]
[ext_resource type="Texture2D" uid="uid://pxur532t51ow" path="res://Art/character_sprite/argalia/Default.png" id="2_tjx60"]
[ext_resource type="Script" uid="uid://di50c51to3xax" path="res://Script/Character/Character Components/CharacterStats/stats_controller.gd" id="2_yop1s"]
[ext_resource type="Script" uid="uid://bwysw2mie1vho" path="res://Script/Character/Character Components/CharacterFacing/facing_controller.gd" id="3_dgdik"]
[ext_resource type="Script" uid="uid://dm4auyugtcvs4" path="res://Script/Character/Character Components/CharacterAbility/character_ability_controller.gd" id="3_ouw7k"]
[ext_resource type="Script" uid="uid://b18vpmxkm8dx0" path="res://Script/Character/Character Components/CharacterSprite/character_sprite.gd" id="4_g08oy"]
[ext_resource type="Resource" uid="uid://bpoaj3qwoapyp" path="res://Resource/Character Sprite/argalia_sprite.tres" id="5_ylsyo"]
[ext_resource type="Resource" uid="uid://cf4tijk5nlsau" path="res://Resource/CharacterVFX/argalia_vfx_resource.tres" id="6_co0rr"]
[ext_resource type="Script" uid="uid://2ytid1uivak6" path="res://Script/Character/Character Components/CharacterAbility/ability_data.gd" id="8_psia3"]
[ext_resource type="Script" uid="uid://b54mqe1887k7e" path="res://Script/Character/Character Controller/vfx_controller.gd" id="11_psia3"]
[ext_resource type="Resource" uid="uid://ddt7y2wpi6618" path="res://Resource/Abilities/strike_ability_stats.tres" id="14_1ako7"]
[ext_resource type="PackedScene" uid="uid://bkvh75esl1npm" path="res://Scene/Character/DiceSlot/dice_slots.tscn" id="14_co0rr"]
[ext_resource type="Resource" uid="uid://c6ynhr5w11cos" path="res://Resource/Abilities/pierce_ability_stats.tres" id="14_oi43g"]
[ext_resource type="Script" uid="uid://d378x6snlk8r2" path="res://Script/Character/Character Components/CharacterStats/health_controller.gd" id="15_7ndog"]
[ext_resource type="Resource" uid="uid://b8f8g2akyrop" path="res://Resource/Abilities/blunt_ability_stats.tres" id="15_kretg"]
[ext_resource type="Script" uid="uid://klhyg347pta4" path="res://Script/Character/Character Components/CharacterStats/stats_data.gd" id="16_kretg"]
[ext_resource type="Script" uid="uid://23653me6nc14" path="res://Script/Character/Character Components/CharacterCombat/character_combat_controller.gd" id="18_7ndog"]
[ext_resource type="Script" uid="uid://cxyvbaq3hq5vh" path="res://Script/Character/Character Components/CharacterStats/stagger_controller.gd" id="18_lq7yi"]
[ext_resource type="PackedScene" uid="uid://683e21qcm6t8" path="res://Scene/Character/Combat/combat_view.tscn" id="19_7ndog"]
[ext_resource type="PackedScene" uid="uid://coctoaswqcf8k" path="res://Scene/Character/Stats/stats_view.tscn" id="20_oi43g"]

[sub_resource type="Resource" id="Resource_lq7yi"]
script = ExtResource("16_kretg")
_max_health = 50
_max_stagger = 50
metadata/_custom_type_script = "uid://klhyg347pta4"

[node name="CharacterController" type="Node2D" node_paths=PackedStringArray("stats", "sprite", "vfx", "facing", "movement", "dice_slot_controller", "ability_controller", "action_controller", "combat_controller")]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_y5alb")
is_player = null
char_name = null
data = ExtResource("2_h3o0s")
stats = NodePath("StatsController")
sprite = NodePath("Sprite")
vfx = NodePath("VFX")
facing = NodePath("FacingController")
movement = NodePath("Movement")
dice_slot_controller = NodePath("DiceSlotController")
ability_controller = NodePath("Abilities")
action_controller = NodePath("ActionController")
combat_controller = NodePath("CombatController")

[node name="FacingController" type="Node" parent="."]
script = ExtResource("3_dgdik")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -88)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_tjx60")
script = ExtResource("4_g08oy")
sprite_resource = ExtResource("5_ylsyo")

[node name="VFX" type="Sprite2D" parent="."]
position = Vector2(0, -88)
scale = Vector2(0.75, 0.75)
script = ExtResource("11_psia3")
vfx_resource = ExtResource("6_co0rr")

[node name="Movement" type="Node" parent="."]
script = ExtResource("2_ptqjd")

[node name="Abilities" type="Node" parent="."]
script = ExtResource("3_ouw7k")
ability_list = Array[ExtResource("8_psia3")]([ExtResource("14_1ako7"), ExtResource("14_oi43g"), ExtResource("15_kretg"), ExtResource("14_oi43g"), ExtResource("14_1ako7")])

[node name="DiceSlotController" parent="." instance=ExtResource("14_co0rr")]
offset_top = -149.0
offset_bottom = -149.0

[node name="StatsController" type="Node" parent="." node_paths=PackedStringArray("view", "health", "stagger")]
script = ExtResource("2_yop1s")
stats_data = SubResource("Resource_lq7yi")
view = NodePath("../UI/StatsView")
health = NodePath("HealthController")
stagger = NodePath("StaggerController")

[node name="HealthController" type="Node" parent="StatsController"]
script = ExtResource("15_7ndog")

[node name="StaggerController" type="Node" parent="StatsController"]
script = ExtResource("18_lq7yi")

[node name="ActionController" type="Node" parent="." node_paths=PackedStringArray("sprite_controller", "vfx_controller", "facing_controller")]
script = ExtResource("2_8fd8j")
sprite_controller = NodePath("../Sprite")
vfx_controller = NodePath("../VFX")
facing_controller = NodePath("../FacingController")

[node name="CombatController" type="Node" parent="." node_paths=PackedStringArray("slot_controller", "ability_controller", "view")]
script = ExtResource("18_7ndog")
slot_controller = NodePath("../DiceSlotController")
ability_controller = NodePath("../Abilities")
view = NodePath("../UI/CombatView")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="CombatView" parent="UI" instance=ExtResource("19_7ndog")]
layout_mode = 0
offset_top = -200.0
offset_bottom = -200.0

[node name="StatsView" parent="UI" instance=ExtResource("20_oi43g")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.335, 0.335)
